# splitp

./: Cargo.toml  README.md
.github/workflows/: make-binaries.yml
src/: main.rs  utils.rs
