[package]
name = "splitp"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "Streaming SPLiT-seq read pre-processing"
homepage = "https://github.com/COMBINE-lab/splitp"
repository = "https://github.com/COMBINE-lab/splitp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
needletail = "0.5.1"
clap = { version = "4.3.3", features = ["derive", "wrap_help","cargo"] }
csv = "1.1"
serde = { version="1.0.103", features = ["derive"] }
